@@ -1,6 +1,6 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2010, Sun Microsystems, Inc., Kohsuke Kawaguchi,
  * Erik Ramfelt, Seiji Sogabe, Martin Eigenbrodt, Alan Harder
  *
@@ -10,10 +10,10 @@
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -22,9 +22,11 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
 import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Extension;
 import hudson.Util;
 import hudson.diagnosis.OldDataMonitor;
@@ -39,6 +41,8 @@ import hudson.util.HttpResponses;
 import hudson.views.ListViewColumn;
 import hudson.views.StatusFilter;
 import hudson.views.ViewJobFilter;
+import io.jenkins.servlet.ServletExceptionWrapper;
+import jakarta.servlet.ServletException;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -53,7 +57,6 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
-import javax.servlet.ServletException;
 import jenkins.model.Jenkins;
 import net.jcip.annotations.GuardedBy;
 import net.sf.json.JSONObject;
@@ -65,7 +68,8 @@ import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.HttpResponse;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.StaplerRequest2;
+import org.kohsuke.stapler.StaplerResponse2;
 import org.kohsuke.stapler.interceptor.RequirePOST;
 import org.kohsuke.stapler.verb.POST;
 import org.springframework.security.access.AccessDeniedException;
@@ -82,7 +86,7 @@ public class ListView extends View implements DirectlyModifiableView {
      */
     @GuardedBy("this")
     /*package*/ /*almost-final*/ SortedSet<String> jobNames = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
-    
+
     private DescribableList<ViewJobFilter, Descriptor<ViewJobFilter>> jobFilters;
 
     private DescribableList<ListViewColumn, Descriptor<ListViewColumn>> columns;
@@ -91,12 +95,12 @@ public class ListView extends View implements DirectlyModifiableView {
      * Include regex string.
      */
     private String includeRegex;
-    
+
     /**
      * Whether to recurse in ItemGroups
      */
-    private boolean recurse;
-    
+    private volatile boolean recurse;
+
     /**
      * Compiled include pattern from the includeRegex string.
      */
@@ -136,15 +140,15 @@ public class ListView extends View implements DirectlyModifiableView {
     }
 
     protected Object readResolve() {
-        if(includeRegex!=null) {
+        if (includeRegex != null) {
             try {
                 includePattern = Pattern.compile(includeRegex);
             } catch (PatternSyntaxException x) {
                 includeRegex = null;
-                OldDataMonitor.report(this, Collections.singleton(x));
+                OldDataMonitor.report(this, Set.of(x));
             }
         }
-        synchronized(this) {
+        synchronized (this) {
             if (jobNames == null) {
                 jobNames = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
             }
@@ -173,11 +177,11 @@ public class ListView extends View implements DirectlyModifiableView {
      * Used to determine if we want to display the Add button.
      */
     public boolean hasJobFilterExtensions() {
-    	return !ViewJobFilter.all().isEmpty();
+        return !ViewJobFilter.all().isEmpty();
     }
 
     public DescribableList<ViewJobFilter, Descriptor<ViewJobFilter>> getJobFilters() {
-    	return jobFilters;
+        return jobFilters;
     }
 
     @Override
@@ -185,7 +189,7 @@ public class ListView extends View implements DirectlyModifiableView {
         return columns;
     }
 
-    public Set<String> getJobNames() {
+    public synchronized Set<String> getJobNames() {
         return Collections.unmodifiableSet(jobNames);
     }
 
@@ -263,7 +267,7 @@ public class ListView extends View implements DirectlyModifiableView {
         }
         // for sanity, trim off duplicates
         items = new ArrayList<>(new LinkedHashSet<>(items));
-        
+
         return items;
     }
 
@@ -280,7 +284,7 @@ public class ListView extends View implements DirectlyModifiableView {
     public boolean contains(TopLevelItem item) {
       return getItems().contains(item);
     }
-    
+
     public synchronized boolean jobNamesContains(TopLevelItem item) {
         if (item == null) return false;
         return jobNames.contains(item.getRelativeNameFrom(getOwner().getItemGroup()));
@@ -348,16 +352,16 @@ public class ListView extends View implements DirectlyModifiableView {
     @Restricted(NoExternalUse.class) // called from newJob_button-bar view
     @SuppressWarnings("unused") // called from newJob_button-bar view
     public boolean isAddToCurrentView() {
-        synchronized(this) {
+        synchronized (this) {
             return !jobNames.isEmpty() || // There are already items in this view specified by name
                     (jobFilters.isEmpty() && includePattern == null) // No other way to include items is used
                     ;
         }
     }
 
-    private boolean needToAddToCurrentView(StaplerRequest req) throws ServletException {
+    private boolean needToAddToCurrentView(StaplerRequest2 req) throws ServletException {
         String json = req.getParameter("json");
-        if (json != null && json.length() > 0) {
+        if (json != null && !json.isEmpty()) {
             // Submitted via UI
             JSONObject form = req.getSubmittedForm();
             return form.has("addToCurrentView") && form.getBoolean("addToCurrentView");
@@ -369,11 +373,11 @@ public class ListView extends View implements DirectlyModifiableView {
 
     @Override
     @POST
-    public Item doCreateItem(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public Item doCreateItem(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         ItemGroup<? extends TopLevelItem> ig = getOwner().getItemGroup();
         if (ig instanceof ModifiableItemGroup) {
-            TopLevelItem item = ((ModifiableItemGroup<? extends TopLevelItem>)ig).doCreateItem(req, rsp);
-            if (item!=null) {
+            TopLevelItem item = ((ModifiableItemGroup<? extends TopLevelItem>) ig).doCreateItem(req, rsp);
+            if (item != null) {
                 if (needToAddToCurrentView(req)) {
                     synchronized (this) {
                         jobNames.add(item.getRelativeNameFrom(getOwner().getItemGroup()));
@@ -390,7 +394,7 @@ public class ListView extends View implements DirectlyModifiableView {
     @RequirePOST
     public HttpResponse doAddJobToView(@QueryParameter String name) throws IOException, ServletException {
         checkPermission(View.CONFIGURE);
-        if(name==null)
+        if (name == null)
             throw new Failure("Query parameter 'name' is required");
 
         TopLevelItem item = resolveName(name);
@@ -409,11 +413,11 @@ public class ListView extends View implements DirectlyModifiableView {
     @RequirePOST
     public HttpResponse doRemoveJobFromView(@QueryParameter String name) throws IOException, ServletException {
         checkPermission(View.CONFIGURE);
-        if(name==null)
+        if (name == null)
             throw new Failure("Query parameter 'name' is required");
 
         TopLevelItem item = resolveName(name);
-        if (item==null)
+        if (item == null)
             throw new Failure("Query parameter 'name' does not correspond to a known and readable item");
 
         if (remove(item))
@@ -437,7 +441,32 @@ public class ListView extends View implements DirectlyModifiableView {
      * Load view-specific properties here.
      */
     @Override
-    protected void submit(StaplerRequest req) throws ServletException, FormException, IOException {
+    protected void submit(StaplerRequest2 req) throws ServletException, FormException, IOException {
+        if (Util.isOverridden(View.class, getClass(), "submit", StaplerRequest.class)) {
+            try {
+                submit(StaplerRequest.fromStaplerRequest2(req));
+            } catch (javax.servlet.ServletException e) {
+                throw ServletExceptionWrapper.toJakartaServletException(e);
+            }
+        } else {
+            submitImpl(req);
+        }
+    }
+
+    /**
+     * @deprecated use {@link #submit(StaplerRequest2)}
+     */
+    @Deprecated
+    @Override
+    protected void submit(StaplerRequest req) throws javax.servlet.ServletException, FormException, IOException {
+        try {
+            submitImpl(StaplerRequest.toStaplerRequest2(req));
+        } catch (ServletException e) {
+            throw ServletExceptionWrapper.fromJakartaServletException(e);
+        }
+    }
+
+    private void submitImpl(StaplerRequest2 req) throws ServletException, FormException, IOException {
         JSONObject json = req.getSubmittedForm();
         synchronized (this) {
             recurse = json.optBoolean("recurse", true);
@@ -450,7 +479,7 @@ public class ListView extends View implements DirectlyModifiableView {
             }
             for (TopLevelItem item : items) {
                 String relativeNameFrom = item.getRelativeNameFrom(getOwner().getItemGroup());
-                if(req.getParameter(relativeNameFrom)!=null) {
+                if (req.getParameter("item_" + relativeNameFrom) != null) {
                     jobNames.add(relativeNameFrom);
                 }
             }
@@ -464,14 +493,14 @@ public class ListView extends View implements DirectlyModifiableView {
         columns.rebuildHetero(req, json, ListViewColumn.all(), "columns");
 
         if (jobFilters == null) {
-        	jobFilters = new DescribableList<>(this);
+            jobFilters = new DescribableList<>(this);
         }
         jobFilters.rebuildHetero(req, json, ViewJobFilter.all(), "jobFilters");
 
         String filter = Util.fixEmpty(req.getParameter("statusFilter"));
         statusFilter = filter != null ? "1".equals(filter) : null;
     }
-    
+
     /** @since 1.526 */
     @DataBoundSetter
     public void setIncludeRegex(String includeRegex) {
@@ -498,6 +527,7 @@ public class ListView extends View implements DirectlyModifiableView {
 
     @Extension @Symbol("list")
     public static class DescriptorImpl extends ViewDescriptor {
+        @NonNull
         @Override
         public String getDisplayName() {
             return Messages.ListView_DisplayName();
@@ -506,7 +536,7 @@ public class ListView extends View implements DirectlyModifiableView {
         /**
          * Checks if the include regular expression is valid.
          */
-        public FormValidation doCheckIncludeRegex( @QueryParameter String value ) throws IOException, ServletException, InterruptedException  {
+        public FormValidation doCheckIncludeRegex(@QueryParameter String value) throws IOException, ServletException, InterruptedException  {
             String v = Util.fixEmpty(value);
             if (v != null) {
                 try {
@@ -537,6 +567,7 @@ public class ListView extends View implements DirectlyModifiableView {
                 locationChanged(oldFullName, newFullName);
             }
         }
+
         private void locationChanged(String oldFullName, String newFullName) {
             final Jenkins jenkins = Jenkins.get();
             locationChanged(jenkins, oldFullName, newFullName);
@@ -546,6 +577,7 @@ public class ListView extends View implements DirectlyModifiableView {
                 }
             }
         }
+
         private void locationChanged(ViewGroup vg, String oldFullName, String newFullName) {
             for (View v : vg.getViews()) {
                 if (v instanceof ListView) {
@@ -582,6 +614,7 @@ public class ListView extends View implements DirectlyModifiableView {
                 deleted(item);
             }
         }
+
         private void deleted(Item item) {
             final Jenkins jenkins = Jenkins.get();
             deleted(jenkins, item);
@@ -591,6 +624,7 @@ public class ListView extends View implements DirectlyModifiableView {
                 }
             }
         }
+
         private void deleted(ViewGroup vg, Item item) {
             for (View v : vg.getViews()) {
                 if (v instanceof ListView) {
