@@ -6,13 +6,14 @@ import hudson.model.Descriptor.FormException;
 import hudson.model.User;
 import hudson.model.UserProperty;
 import hudson.model.UserPropertyDescriptor;
+import hudson.model.userproperty.UserPropertyCategory;
 import hudson.security.SecurityRealm;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import jenkins.model.Jenkins;
@@ -20,7 +21,7 @@ import net.sf.json.JSONObject;
 import org.jenkinsci.Symbol;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -43,9 +44,9 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
      * Stick to the same object since there's no UI for this.
      */
     @Override
-    public UserProperty reconfigure(StaplerRequest req, JSONObject form) throws FormException {
-    	req.bindJSON(this, form);
-    	return this;
+    public UserProperty reconfigure(StaplerRequest2 req, JSONObject form) throws FormException {
+        req.bindJSON(this, form);
+        return this;
     }
 
     /**
@@ -54,8 +55,8 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
     public Collection<? extends GrantedAuthority> getAuthorities2() {
         String[] roles = this.roles;    // capture to a variable for immutability
 
-        if(roles == null){
-            return Collections.singleton(SecurityRealm.AUTHENTICATED_AUTHORITY2);
+        if (roles == null) {
+            return Set.of(SecurityRealm.AUTHENTICATED_AUTHORITY2);
         }
 
         String authenticatedRole = SecurityRealm.AUTHENTICATED_AUTHORITY2.getAuthority();
@@ -90,7 +91,7 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
             roles.add(ga.getAuthority());
         }
         String[] a = roles.toArray(new String[0]);
-        if (!Arrays.equals(this.roles,a)) {
+        if (!Arrays.equals(this.roles, a)) {
             this.roles = a;
             this.timestamp = System.currentTimeMillis();
             user.save();
@@ -101,7 +102,7 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
      * Removes the recorded information
      */
     public void invalidate() throws IOException {
-        if (roles!=null) {
+        if (roles != null) {
             roles = null;
             timestamp = System.currentTimeMillis();
             user.save();
@@ -120,13 +121,13 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
                 // but as this is a callback of a successful login we can safely create the user.
                 User u = User.getById(username, true);
                 LastGrantedAuthoritiesProperty o = u.getProperty(LastGrantedAuthoritiesProperty.class);
-                if (o==null)
-                    u.addProperty(o=new LastGrantedAuthoritiesProperty());
+                if (o == null)
+                    u.addProperty(o = new LastGrantedAuthoritiesProperty());
                 Authentication a = Jenkins.getAuthentication2();
-                if (a!=null && a.getName().equals(username))
+                if (a != null && a.getName().equals(username))
                     o.update(a);    // just for defensive sanity checking
             } catch (IOException e) {
-                LOGGER.log(Level.WARNING, "Failed to record granted authorities",e);
+                LOGGER.log(Level.WARNING, "Failed to record granted authorities", e);
             }
         }
 
@@ -166,10 +167,15 @@ public class LastGrantedAuthoritiesProperty extends UserProperty {
         public boolean isEnabled() {
             return false;
         }
-        
+
         @Override
         public UserProperty newInstance(User user) {
             return null;
+        }
+
+        @Override
+        public @NonNull UserPropertyCategory getUserPropertyCategory() {
+            return UserPropertyCategory.get(UserPropertyCategory.Invisible.class);
         }
     }
 
