@@ -1,22 +1,28 @@
 package jenkins.security;
 
+import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assume.assumeFalse;
 
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import hudson.ExtensionList;
 import hudson.FilePath;
+import hudson.Functions;
 import hudson.model.DirectoryBrowserSupport;
 import hudson.model.FreeStyleProject;
 import hudson.model.Item;
 import hudson.model.UnprotectedRootAction;
+import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
 import java.util.UUID;
 import jenkins.model.Jenkins;
 import jenkins.model.JenkinsLocationConfiguration;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.Page;
+import org.htmlunit.html.HtmlPage;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
@@ -47,6 +53,34 @@ public class ResourceDomainTest {
         resourceRoot = root.toString().replace("localhost", RESOURCE_DOMAIN);
         ResourceDomainConfiguration configuration = ExtensionList.lookupSingleton(ResourceDomainConfiguration.class);
         configuration.setUrl(resourceRoot);
+    }
+
+    @Test
+    public void groupPermissionsWork() throws Exception {
+        final JenkinsRule.DummySecurityRealm securityRealm = j.createDummySecurityRealm();
+        securityRealm.addGroups("alice", "admins");
+        j.jenkins.setSecurityRealm(securityRealm);
+        MockAuthorizationStrategy a = new MockAuthorizationStrategy().grant(Jenkins.READ).everywhere().to("admins");
+        j.jenkins.setAuthorizationStrategy(a);
+
+        JenkinsRule.WebClient webClient = j.createWebClient().login("alice");
+
+        { // DBS directory listing is shown as always
+            Page page = webClient.goTo("userContent");
+            Assert.assertEquals("successful request", 200, page.getWebResponse().getStatusCode());
+            Assert.assertTrue("still on the original URL", page.getUrl().toString().contains("/userContent"));
+            Assert.assertTrue("web page", page.isHtmlPage());
+            Assert.assertTrue("complex web page", page.getWebResponse().getContentAsString().contains("javascript"));
+        }
+        { // DBS on primary domain forwards to second domain when trying to access a file URL
+            webClient.setRedirectEnabled(true);
+            Page page = webClient.goTo("userContent/readme.txt", "text/plain");
+            final String resourceResponseUrl = page.getUrl().toString();
+            Assert.assertEquals("resource response success", 200, page.getWebResponse().getStatusCode());
+            Assert.assertNull("no CSP headers", page.getWebResponse().getResponseHeaderValue("Content-Security-Policy"));
+            Assert.assertTrue("Served from resource domain", resourceResponseUrl.contains(RESOURCE_DOMAIN));
+            Assert.assertTrue("Served from resource action", resourceResponseUrl.contains("static-files"));
+        }
     }
 
     @Test
@@ -269,12 +303,12 @@ public class ResourceDomainTest {
     }
 
 //    @Test
-    public void indexFileIsUsedIfDefined() throws Exception {
+    public void indexFileIsUsedIfDefined() {
         // TODO Test with DBS with and without directory index file
     }
 
     @Test
-    public void adminMonitorShowsUpWithOverriddenCSP() throws Exception {
+    public void adminMonitorShowsUpWithOverriddenCSP() {
         ResourceDomainRecommendation monitor = ExtensionList.lookupSingleton(ResourceDomainRecommendation.class);
         Assert.assertFalse(monitor.isActivated());
         System.setProperty(DirectoryBrowserSupport.class.getName() + ".CSP", "");
@@ -308,7 +342,7 @@ public class ResourceDomainTest {
     }
 
     @Test
-    public void testRedirectUrls() throws Exception {
+    public void testRedirectUrls() {
         ResourceDomainRootAction rootAction = ResourceDomainRootAction.get();
         String url = rootAction.getRedirectUrl(new ResourceDomainRootAction.Token("foo", "bar", Instant.now()), "foo bar baz");
         Assert.assertFalse("urlencoded", url.contains(" "));
@@ -338,6 +372,7 @@ public class ResourceDomainTest {
     @Test
     @Issue("JENKINS-59849")
     public void testMoreUrlEncoding() throws Exception {
+        assumeFalse("TODO: Implement this test on Windows", Functions.isWindows());
         JenkinsRule.WebClient webClient = j.createWebClient();
         webClient.setThrowExceptionOnFailingStatusCode(false);
         webClient.setRedirectEnabled(true);
@@ -349,13 +384,13 @@ public class ResourceDomainTest {
         URL url = page.getUrl();
         Assert.assertTrue("page is served by resource domain", url.toString().contains("/static-files/"));
 
-        URL dirUrl = new URL(url.toString().replace("%20100%25%20evil%20content%20.html", ""));
+        URL dirUrl = new URI(url.toString().replace("%20100%25%20evil%20content%20.html", "")).toURL();
         Page dirPage = webClient.getPage(dirUrl);
         Assert.assertEquals("page is found", 200, dirPage.getWebResponse().getStatusCode());
         Assert.assertTrue("page content is HTML", dirPage.getWebResponse().getContentAsString().contains("href"));
         Assert.assertTrue("page content references file", dirPage.getWebResponse().getContentAsString().contains("evil content"));
 
-        URL topDirUrl = new URL(url.toString().replace("%20100%25%20evil%20dir%20name%20%20%20/%20100%25%20evil%20content%20.html", ""));
+        URL topDirUrl = new URI(url.toString().replace("%20100%25%20evil%20dir%20name%20%20%20/%20100%25%20evil%20content%20.html", "")).toURL();
         Page topDirPage = webClient.getPage(topDirUrl);
         Assert.assertEquals("page is found", 200, topDirPage.getWebResponse().getStatusCode());
         Assert.assertTrue("page content is HTML", topDirPage.getWebResponse().getContentAsString().contains("href"));
@@ -388,6 +423,34 @@ public class ResourceDomainTest {
             FilePath tempDir = jenkins.getRootPath().createTempDir("root", "tmp");
             tempDir.child(" 100% evil dir name   ").child(" 100% evil content .html").write("this is the content", "UTF-8");
             return new DirectoryBrowserSupport(jenkins, tempDir, "title", "", true);
+        }
+    }
+
+    @Test
+    public void authenticatedCannotAccessResourceDomainUnlessAllowedBySystemProperty() throws Exception {
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        final MockAuthorizationStrategy authorizationStrategy = new MockAuthorizationStrategy();
+        authorizationStrategy.grant(Jenkins.ADMINISTER).everywhere().to("admin").grant(Jenkins.READ).everywhere().toEveryone();
+        j.jenkins.setAuthorizationStrategy(authorizationStrategy);
+        final String resourceUrl;
+        try (JenkinsRule.WebClient wc = j.createWebClient().withRedirectEnabled(false).withThrowExceptionOnFailingStatusCode(false)) {
+            final Page htmlPage = wc.goTo("userContent/readme.txt", "");
+            resourceUrl = htmlPage.getWebResponse().getResponseHeaderValue("Location");
+        }
+        assertThat(resourceUrl, containsString("static-files/"));
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicApiToken("admin")) {
+            assertThat(assertThrows(FailingHttpStatusCodeException.class, () -> wc.getPage(new URL(resourceUrl))).getStatusCode(), is(400));
+        }
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicCredentials("admin")) {
+            assertThat(assertThrows(FailingHttpStatusCodeException.class, () -> wc.getPage(new URL(resourceUrl))).getStatusCode(), is(400));
+        }
+
+        ResourceDomainRootAction.ALLOW_AUTHENTICATED_USER = true;
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicApiToken("admin")) {
+            assertThat(wc.getPage(new URL(resourceUrl)).getWebResponse().getStatusCode(), is(200));
+        }
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicCredentials("admin")) {
+            assertThat(wc.getPage(new URL(resourceUrl)).getWebResponse().getStatusCode(), is(200));
         }
     }
 }
