@@ -21,24 +21,19 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package lib.form;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
-import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.html.DomElement;
-import com.gargoylesoftware.htmlunit.html.HtmlHiddenInput;
-import com.gargoylesoftware.htmlunit.html.HtmlInput;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.html.HtmlTextInput;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.FilePath;
@@ -66,16 +61,23 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 import java.util.regex.Pattern;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.Jenkins;
 import jenkins.model.TransientActionFactory;
-import jenkins.security.apitoken.ApiTokenTestHelper;
+import jenkins.security.ExtendedReadSecretRedaction;
 import jenkins.tasks.SimpleBuildStep;
+import org.htmlunit.Page;
+import org.htmlunit.html.DomElement;
+import org.htmlunit.html.HtmlHiddenInput;
+import org.htmlunit.html.HtmlInput;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.html.HtmlTextInput;
 import org.junit.Rule;
 import org.junit.Test;
+import org.jvnet.hudson.test.For;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
@@ -84,7 +86,7 @@ import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.Stapler;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.springframework.security.core.Authentication;
 
 public class PasswordTest {
@@ -96,9 +98,9 @@ public class PasswordTest {
     public void secretNotPlainText() throws Exception {
         SecretNotPlainText.secret = Secret.fromString("secret");
         HtmlPage p = j.createWebClient().goTo("secretNotPlainText");
-        String value = ((HtmlInput)p.getElementById("password")).getValueAttribute();
+        String value = ((HtmlInput) p.getElementById("password")).getValue();
         assertNotEquals("password shouldn't be plain text", "secret", value);
-        assertEquals("secret",Secret.fromString(value).getPlainText());
+        assertEquals("secret", Secret.fromString(value).getPlainText());
     }
 
     @TestExtension("secretNotPlainText")
@@ -124,9 +126,8 @@ public class PasswordTest {
 
     @Issue({"SECURITY-266", "SECURITY-304"})
     @Test
+    @For(ExtendedReadSecretRedaction.class)
     public void testExposedCiphertext() throws Exception {
-        ApiTokenTestHelper.enableLegacyBehavior();
-
         boolean saveEnabled = Item.EXTENDED_READ.getEnabled();
         Item.EXTENDED_READ.setEnabled(true);
         try {
@@ -175,8 +176,8 @@ public class PasswordTest {
             getJobCommand.setTransportAuth2(adminAuth);
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
             String pName = p.getFullName();
-            getJobCommand.main(Collections.singletonList(pName), Locale.ENGLISH, System.in, new PrintStream(baos), System.err);
-            assertEquals(xmlAdmin, baos.toString(configXml.getWebResponse().getContentCharset().name()));
+            getJobCommand.main(List.of(pName), Locale.ENGLISH, System.in, new PrintStream(baos), System.err);
+            assertEquals(xmlAdmin, baos.toString(configXml.getWebResponse().getContentCharset()));
             CopyJobCommand copyJobCommand = new CopyJobCommand();
             copyJobCommand.setTransportAuth2(adminAuth);
             String pAdminName = pName + "-admin";
@@ -198,8 +199,8 @@ public class PasswordTest {
             Authentication devAuth = User.get("dev").impersonate2();
             getJobCommand.setTransportAuth2(devAuth);
             baos = new ByteArrayOutputStream();
-            getJobCommand.main(Collections.singletonList(pName), Locale.ENGLISH, System.in, new PrintStream(baos), System.err);
-            assertEquals(xmlDev, baos.toString(configXml.getWebResponse().getContentCharset().name()));
+            getJobCommand.main(List.of(pName), Locale.ENGLISH, System.in, new PrintStream(baos), System.err);
+            assertEquals(xmlDev, baos.toString(configXml.getWebResponse().getContentCharset()));
             copyJobCommand = new CopyJobCommand();
             copyJobCommand.setTransportAuth2(devAuth);
             String pDevName = pName + "-dev";
@@ -234,16 +235,19 @@ public class PasswordTest {
 
     public static class VulnerableProperty extends JobProperty<FreeStyleProject> {
         public final Secret secret;
+
         @DataBoundConstructor
         public VulnerableProperty(Secret secret) {
             this.secret = secret;
         }
+
         @TestExtension
         public static class DescriptorImpl extends JobPropertyDescriptor {
             static String incomingURL;
             static String checkedSecret;
+
             public FormValidation doCheckSecret(@QueryParameter String value) {
-                StaplerRequest req = Stapler.getCurrentRequest();
+                StaplerRequest2 req = Stapler.getCurrentRequest2();
                 incomingURL = req.getRequestURIWithQueryString();
                 System.err.println("processing " + incomingURL + " via " + req.getMethod() + ": " + value);
                 checkedSecret = value;
@@ -280,8 +284,8 @@ public class PasswordTest {
             if ("hidden".equals(element.getAttribute("type")) && element.getAttribute("class").contains("complex-password-field")) {
                 final HtmlHiddenInput input = (HtmlHiddenInput) element;
                 // assert that all password fields contain encrypted values after we set plain values
-                assertTrue(input.getValueAttribute().startsWith("{"));
-                assertTrue(input.getValueAttribute().endsWith("}"));
+                assertTrue(input.getValue().startsWith("{"));
+                assertTrue(input.getValue().endsWith("}"));
             }
         }
 
@@ -335,7 +339,7 @@ public class PasswordTest {
         }
 
         public void setStringWithSecretGetterAndSetter(Secret stringWithSecretGetterAndSetter) {
-            this.stringWithSecretGetterAndSetter = stringWithSecretGetterAndSetter == null? null : stringWithSecretGetterAndSetter.getPlainText();
+            this.stringWithSecretGetterAndSetter = stringWithSecretGetterAndSetter == null ? null : stringWithSecretGetterAndSetter.getPlainText();
         }
 
         public static PasswordHolderConfiguration getInstance() {
@@ -397,8 +401,8 @@ public class PasswordTest {
             if ("hidden".equals(element.getAttribute("type")) && element.getAttribute("class").contains("complex-password-field")) {
                 final HtmlHiddenInput input = (HtmlHiddenInput) element;
                 // assert that all password fields contain encrypted values after we set plain values
-                assertTrue(input.getValueAttribute().startsWith("{"));
-                assertTrue(input.getValueAttribute().endsWith("}"));
+                assertTrue(input.getValue().startsWith("{"));
+                assertTrue(input.getValue().endsWith("}"));
                 i++;
             }
         }
@@ -521,7 +525,7 @@ public class PasswordTest {
 
         @DataBoundSetter
         public void setStringWithStringGetterSecretSetter(Secret stringWithStringGetterSecretSetter) {
-            this.stringWithStringGetterSecretSetter = stringWithStringGetterSecretSetter == null? null : stringWithStringGetterSecretSetter.getPlainText();
+            this.stringWithStringGetterSecretSetter = stringWithStringGetterSecretSetter == null ? null : stringWithStringGetterSecretSetter.getPlainText();
         }
 
         public Secret getStringWithSecretGetterSecretSetter() {
@@ -530,7 +534,7 @@ public class PasswordTest {
 
         @DataBoundSetter
         public void setStringWithSecretGetterSecretSetter(Secret stringWithSecretGetterSecretSetter) {
-            this.stringWithSecretGetterSecretSetter = stringWithSecretGetterSecretSetter == null? null : stringWithSecretGetterSecretSetter.getPlainText();
+            this.stringWithSecretGetterSecretSetter = stringWithSecretGetterSecretSetter == null ? null : stringWithSecretGetterSecretSetter.getPlainText();
         }
 
         @Override
@@ -575,8 +579,8 @@ public class PasswordTest {
             if ("hidden".equals(element.getAttribute("type")) && element.getAttribute("class").contains("complex-password-field")) {
                 final HtmlHiddenInput input = (HtmlHiddenInput) element;
                 // assert that all password fields contain encrypted values after we set plain values
-                assertTrue(input.getValueAttribute().startsWith("{"));
-                assertTrue(input.getValueAttribute().endsWith("}"));
+                assertTrue(input.getValue().startsWith("{"));
+                assertTrue(input.getValue().endsWith("}"));
             }
         }
 
@@ -628,8 +632,8 @@ public class PasswordTest {
             if ("hidden".equals(element.getAttribute("type")) && element.getAttribute("class").contains("complex-password-field")) {
                 final HtmlHiddenInput input = (HtmlHiddenInput) element;
                 // assert that all password fields contain encrypted values after we set plain values
-                assertTrue(input.getValueAttribute().startsWith("{"));
-                assertTrue(input.getValueAttribute().endsWith("}"));
+                assertTrue(input.getValue().startsWith("{"));
+                assertTrue(input.getValue().endsWith("}"));
             }
         }
 
@@ -642,7 +646,7 @@ public class PasswordTest {
         for (DomElement element : htmlPage.getElementsByTagName("input")) {
             if ("hidden".equals(element.getAttribute("type")) && element.getAttribute("class").contains("complex-password-field")) {
                 final HtmlHiddenInput input = (HtmlHiddenInput) element;
-                assertEquals("********", input.getValueAttribute());
+                assertEquals("********", input.getValue());
             }
         }
     }
@@ -658,7 +662,7 @@ public class PasswordTest {
         @NonNull
         @Override
         public Collection<? extends Action> createFor(@NonNull Job target) {
-            return Collections.singletonList(new ActionImpl());
+            return List.of(new ActionImpl());
         }
     }
 
@@ -716,7 +720,7 @@ public class PasswordTest {
             wc.login(READONLY);
             HtmlPage page = wc.goTo("computer/(built-in)/secured/");
 
-            String value = ((HtmlInput)page.getElementById("password")).getValueAttribute();
+            String value = ((HtmlInput) page.getElementById("password")).getValue();
             assertThat(value, is("********"));
         }
 
@@ -724,7 +728,7 @@ public class PasswordTest {
             wc.login(ADMIN);
             HtmlPage page = wc.goTo("computer/(built-in)/secured/");
 
-            String value = ((HtmlInput)page.getElementById("password")).getValueAttribute();
+            String value = ((HtmlInput) page.getElementById("password")).getValue();
             assertThat(Secret.fromString(value).getPlainText(), is("abcdefgh"));
         }
     }
